Differential Revision: https://phabricator.kde.org/D698
Port to QtWebEngine (finally!)

--- a/src/lib/marble/LegendWidget.ui
+++ b/src/lib/marble/LegendWidget.ui
@@ -28,7 +28,7 @@
  <customwidgets>
   <customwidget>
    <class>MarbleLegendBrowser</class>
-   <extends>QWebView</extends>
+   <extends>QWebEngineView</extends>
    <header>MarbleLegendBrowser.h</header>
   </customwidget>
  </customwidgets>
