--- a/src/lib/marble/GoToDialog.ui
+++ b/src/lib/marble/GoToDialog.ui
@@ -75,7 +75,7 @@
    <item row="2" column="0">
     <widget class="QLabel" name="descriptionLabel">
      <property name="text">
-      <string>Enter a search term and press Enter. &lt;a href=&quot;http://userbase.kde.org/Marble/Search&quot;&gt;Details...&lt;/a&gt;</string>
+      <string>Enter a search term and press Enter. &lt;a href=&quot;https://userbase.kde.org/Marble/Search&quot;&gt;Details...&lt;/a&gt;</string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
