--- a/src/lib/marble/MapWizard.ui
+++ b/src/lib/marble/MapWizard.ui
@@ -96,7 +96,7 @@ p, li { white-space: pre-wrap; }
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;WMS Server&lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Please choose a &lt;a href=&quot;http://en.wikipedia.org/wiki/Web_Map_Service&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;WMS&lt;/span&gt;&lt;/a&gt; server or enter a custom server URL.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Please choose a &lt;a href=&quot;https://en.wikipedia.org/wiki/Web_Map_Service&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;WMS&lt;/span&gt;&lt;/a&gt; server or enter a custom server URL.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="wordWrap">
        <bool>true</bool>
@@ -150,7 +150,7 @@ p, li { white-space: pre-wrap; }
       <item row="1" column="1">
        <widget class="QLineEdit" name="lineEditWmsUrl">
         <property name="text">
-         <string>http://</string>
+         <string>https://</string>
         </property>
        </widget>
       </item>
@@ -199,7 +199,7 @@ p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;World Map Bitmap Image&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-weight:600;&quot;&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Please choose the location of a world map that is stored in a single image file (JPG, PNG, etc.). It needs to be provided in &lt;a href=&quot;http://en.wikipedia.org/wiki/Equirectangular_projection&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Equirectangular projection&lt;/span&gt;&lt;/a&gt;, so the shape should look like this (size ratio: 2:1):&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Please choose the location of a world map that is stored in a single image file (JPG, PNG, etc.). It needs to be provided in &lt;a href=&quot;https://en.wikipedia.org/wiki/Equirectangular_projection&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Equirectangular projection&lt;/span&gt;&lt;/a&gt;, so the shape should look like this (size ratio: 2:1):&lt;/p&gt;
 &lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;img src=&quot;:/data/svg/worldmap.svg&quot; width=&quot;150&quot; /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="wordWrap">
