--- a/src/lib/marble/routing/RoutingSettingsWidget.ui
+++ b/src/lib/marble/routing/RoutingSettingsWidget.ui
@@ -19,7 +19,7 @@
      <item>
       <widget class="QPushButton" name="addButton">
        <property name="text">
-        <string>&amp;Add</string>
+        <string>&amp;Add...</string>
        </property>
       </widget>
      </item>
@@ -29,7 +29,7 @@
         <bool>false</bool>
        </property>
        <property name="text">
-        <string>&amp;Configure</string>
+        <string>&amp;Configure...</string>
        </property>
       </widget>
      </item>
