--- a/src/lib/marble/TileLevelRangeWidget.ui
+++ b/src/lib/marble/TileLevelRangeWidget.ui
@@ -7,10 +7,22 @@
     <x>0</x>
     <y>0</y>
     <width>273</width>
-    <height>76</height>
+    <height>92</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
