--- a/src/lib/marble/MapWizard.ui
+++ b/src/lib/marble/MapWizard.ui
@@ -149,8 +149,14 @@ p, li { white-space: pre-wrap; }
       </item>
       <item row="1" column="1">
        <widget class="QLineEdit" name="lineEditWmsUrl">
+        <property name="toolTip">
+         <string>Enter the base Url of the WMS service (e.g. &lt;i&gt;https://www.wms.nrw.de/geobasis/wms_nw_dop_overlay&lt;/i&gt;)</string>
+        </property>
         <property name="text">
          <string>https://</string>
+        </property>
+        <property name="placeholderText">
+         <string>Custom</string>
         </property>
        </widget>
       </item>
@@ -172,8 +178,8 @@ p, li { white-space: pre-wrap; }
    </layout>
   </widget>
   <widget class="QWizardPage" name="wizardPageWmsAvailableMaps">
-   <layout class="QGridLayout" name="gridLayout_4">
-    <item row="0" column="0" rowspan="2">
+   <layout class="QVBoxLayout" name="verticalLayout_7">
+    <item>
      <widget class="QLabel" name="labelWmsMaps">
       <property name="text">
        <string>Available Maps:</string>
@@ -183,7 +189,7 @@ p, li { white-space: pre-wrap; }
       </property>
      </widget>
     </item>
-    <item row="0" column="1" rowspan="2">
+    <item>
      <widget class="QListWidget" name="listWidgetWmsMaps"/>
     </item>
    </layout>
@@ -464,25 +470,36 @@ p, li { white-space: pre-wrap; }
    </layout>
   </widget>
   <widget class="QWizardPage" name="wizardPageLegend">
-   <layout class="QGridLayout" name="gridLayout_3">
-    <item row="0" column="0">
-     <widget class="QLabel" name="labelLegend_2">
+   <layout class="QVBoxLayout" name="verticalLayout_8">
+    <item>
+     <widget class="QLabel" name="label_3">
       <property name="text">
-       <string>Legend Image:</string>
+       <string>&lt;b&gt;Optional: Addition of a Map Key&lt;b&gt;</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="lineEditLegend_2"/>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QLabel" name="labelLegend_2">
+        <property name="text">
+         <string>Legend Image:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditLegend_2"/>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonLegend_2">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
-    <item row="0" column="2">
-     <widget class="QPushButton" name="pushButtonLegend_2">
-      <property name="text">
-       <string>...</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0" colspan="2">
+    <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QTextBrowser" name="textBrowserLegend"/>
@@ -626,8 +643,6 @@ p, li { white-space: pre-wrap; }
    </layout>
   </widget>
  </widget>
- <resources>
-  <include location="libmarble.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
