--- a/src/lib/marble/MapWizard.ui
+++ b/src/lib/marble/MapWizard.ui
@@ -474,7 +474,7 @@ p, li { white-space: pre-wrap; }
     <item>
      <widget class="QLabel" name="label_3">
       <property name="text">
-       <string>&lt;b&gt;Optional: Addition of a Map Key&lt;b&gt;</string>
+       <string>&lt;b&gt;Optional: Addition of a Map Key&lt;/b&gt;</string>
       </property>
      </widget>
     </item>
